@@ -116,6 +116,7 @@ DEFINE_ENUM(EMasterReign,
     ((AddSnapshotErasureCodec)                                      (1326))  // babenko
     ((ForbidReshardWhenTableIsLockedByTransaction)                  (1329))  // savrus
     ((FixReshardNonEmptyReplicatedTable)                            (1330))  // ifsmirnov
+    ((DisallowSettingBundleOfMountedTables)                         (1331))  // ifsmirnov
     ((SubjectAliases)                                               (1400))  // s-v-m
     ((OpaquePortalEntrances)                                        (1401))  // shakurov
     ((MultisetAttributes)                                           (1402))  // gritukan
