@@ -6,6 +6,7 @@
 #    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
 #    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.
 
+* ifsmirnov: Disallow changing bundle for mounted tables beyond the portal. Update masters via snapshot.
 * shakurov: YT-13126. "expiration_timeout" attribute. Update masters via snapshot.
 * ifsmirnov: Abandon dynamic stores. Update masters via snapshot.
 * ifsmirnov: Fix forgotten chunk view in overwrite bulk insert. Update masters via snapshot.
